2010-05-16  Sam Weinig  <sam@webkit.org>

        Reviewed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=39192
        Remove unused PERFECT_HASH code CodeGeneratorJS.

        * bindings/scripts/CodeGeneratorJS.pm:

2010-05-17  Jeremy Moskovich  <jeremy@chromium.org>

        Reviewed by Jeremy Orlow.

        Remove debug code that was introduced to help narrow down the
        source of a crash.
        https://bugs.webkit.org/show_bug.cgi?id=36426

        No change in behavior, so no new tests.

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::finishedLoadingDocument):

2010-05-17  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        Bring CanvasRenderingContext2D's createImageData() in line with HTML5 spec
        Added createImageData(ImageData) which returns a new ImageData with the same size as the one passed.
        Changed createImageData(width, height) to use the absolute values of width and height.

        https://bugs.webkit.org/show_bug.cgi?id=39189

        Spec link:
        http://www.whatwg.org/specs/web-apps/current-work/#dom-context-2d-createimagedata

        Test: fast/canvas/canvas-createImageData.html

        * bindings/js/JSCanvasRenderingContext2DCustom.cpp:
        (WebCore::JSCanvasRenderingContext2D::createImageData):
        * html/canvas/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::createImageData):
        * html/canvas/CanvasRenderingContext2D.h:
        * html/canvas/CanvasRenderingContext2D.idl:

2010-05-17  Antti Koivisto  <koivisto@iki.fi>

        This was missing from previous commit.

        * platform/qt/QWebPageClient.h:
        (QWebPageClient::graphicsItemVisibleRect):

2010-05-17  Antti Koivisto  <koivisto@iki.fi>

        Reviewed by Kenneth Rohde Christiansen.

        https://bugs.webkit.org/show_bug.cgi?id=39218
        [Qt] Tiled backing store tiles sometimes flicker when exiting a zoom animation