@@ -834,11 +834,6 @@ JSValue JSC_HOST_CALL jsTestObjPrototypeFunctionMethodWithNonOptionalArgAndTwoOp
     }
 
     int opt1 = args.at(1).toInt32(exec);
-    if (argsCount < 3) {
-        imp->methodWithNonOptionalArgAndTwoOptionalArgs(nonOpt, opt1);
-        return jsUndefined();
-    }
-
     int opt2 = args.at(2).toInt32(exec);
 
     imp->methodWithNonOptionalArgAndTwoOptionalArgs(nonOpt, opt1, opt2);
